@@ -103,7 +103,6 @@
 	[window setMultipleTouchEnabled:NO];
 	
 	// must be called before any othe call to the director
-	// FastDirector is faster, but consumes more battery
 //	[Director useFastDirector];
 	
 	// before creating any layer, set the landscape mode
@@ -125,7 +124,7 @@
 	
 	[window makeKeyAndVisible];
 
-	[[Director sharedDirector] runScene: scene];
+	[[Director sharedDirector] runWithScene: scene];
 }
 
 // getting a call, pause the game
